--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='管理中心',active='home'">
-<header th:replace="admin/header::headerFragment(${title},${active})"></header>
+<header th:replace="admin/header::headerFragment(${title},${active})">
+    <meta charset="UTF-8"/>
+</header>
 <body class="fixed-left">
 <div id="wrapper">
     <div th:replace="admin/header::header-body"></div>
