--- a/src/main/resources/templates/themes/default/confirm_page.html
+++ b/src/main/resources/templates/themes/default/confirm_page.html
@@ -10,6 +10,13 @@
 
 <div>
     <h1>Confirm Page</h1>
+    <!--<button th:onclick="@{/questionaire/disc/getProcessedAnswer}"/>-->
+    <form action="#" th:action="@{/questionaire/disc/getProcessedAnswer}" method="post">
+        <p>
+            <input type="submit" value="view poll answer"/>
+            <!--<input type="reset" value="Reset"/>-->
+        </p>
+    </form>
 </div>
 </body>
 </html>
