--- a/src/main/resources/templates/themes/default/index.html
+++ b/src/main/resources/templates/themes/default/index.html
@@ -1,37 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="themes/default/header::header(null,null)"></div>
+<!--<div th:replace="themes/default/header::header(null,null)"></div> -->
+
 <body>
-<div class="main-content index-page clearfix">
-    <div class="post-lists">
-        <div class="post-lists-body">
-            <div class="post-list-item" th:each="article: ${articles.list}">
-                <div class="post-list-item-container">
-                    <a th:href="${commons.permalink(article)}" class="item-thumb  bg-deepgrey"
-                       th:style="'background-image:url('+@{${commons.show_thumb(article)}}+');'">
-                        <dir class="item-desc" th:text="${article.tags}"></dir>
-                    </a>
-                    <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>
-                    <div class="item-slant"></div>
-                    <div class="item-label">
-                        <div class="item-title"><a th:href="${commons.permalink(article)}"
-                                                   th:text="${article.title}"></a>
-                        </div>
-                        <div class="item-meta clearfix">
-                            <div th:class="'item-meta-ico '+ ${commons.show_icon(article.cid)}"
-                                 th:style="'background: url('+@{/user/img/bg-ico.png}+');no-repeat;background-size: 40px auto;' "></div>
-                            <div class="item-meta-cat" th:utext="${commons.show_categories(article.categories)}">
-                            </div>
-                        </div>
-                    </div>
+<div>
+
+    <form action="#" th:action="@{/questionaire/disc/answerQuestions}" th:object="${discFormAns}" method="post">
+        <table>
+            <tr>
+                <th></th>
+                <th></th>
+                <th>最符合您</th>
+                <th>最不符合您</th>
+            </tr>
+        </table>
+        <div th:each="question: ${questionItemGroups.list}">
+            <table>
+                <tr>
+                    <!--<th>-->
+                        <!--<th:block th:text="${question.questionNumber}"/>-->
+                    <!--</th>-->
+                    <th>
+                        <th:block th:text="${question.questionContent}"/>
+                    </th>
+                </tr>
+                <div th:each="lineItem: ${question.lineItemList}">
+                <tr>
+                    <td>
+                        <th:block th:text="${lineItem.lineNumber}"></th:block>
+                        <th:block th:text="${lineItem.lineContent}"></th:block>
+                    </td>
+                    <td>
+                        <input type="radio" th:name="'most'+${question.questionNumber}" th:value="${lineItem.most}"/>
+                    </td>
+                    <td>
+                        <input type="radio" th:name="'least'+${question.questionNumber}" th:value="${lineItem.least}"/>
+                    </td>
+                </tr>
                 </div>
-            </div>
+            </table>
         </div>
-    </div>
-    <div class="lists-navigator clearfix">
-        <div th:replace="comm/macros::pageNav(${articles},'←','→','page')"></div>
-    </div>
+        <ul class="pagination">
+            <li></li>
+        </ul>
+        <!--<div class="lists-navigator clearfix">-->
+            <!--<div th:replace="comm/macros::pageNav(${questionItemGroups},'←','→','page')"></div>-->
+        <!--</div>-->
+        <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+    </form>
 </div>
 </body>
-<div th:replace="themes/default/footer::footer"></div>
+
+<!--<div th:replace="themes/default/footer::footer"></div>-->
 </html>
